feat: codify mobile notification events
